# qiskit-addon-opt-mapper

./: README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml
docs/apidocs/: index.rst
docs/how_tos/: 01_optimization_problem.ipynb  02_converters_for_optimization_problems.ipynb  03_validating_models.ipynb
qiskit_addon_opt_mapper/: __init__.py  exceptions.py  infinity.py  optionals.py
qiskit_addon_opt_mapper/applications/: __init__.py  bin_packing.py  clique.py  exact_cover.py  graph_optimization_application.py  graph_partition.py  independent_set.py  knapsack.py  max_cut.py  number_partition.py  optimization_application.py  set_packing.py  sk_model.py  tsp.py  vehicle_routing.py  vertex_cover.py
qiskit_addon_opt_mapper/converters/: __init__.py  binary_to_spin.py  equality_to_penalty.py  flip_problem_sense.py  inequality_to_equality.py  integer_to_binary.py  linear_inequality_to_penalty.py  optimization_problem_converter.py  optimization_problem_to_hubo.py  optimization_problem_to_qubo.py  spin_to_binary.py  util.py
qiskit_addon_opt_mapper/problems/: __init__.py  constraint.py  higher_order_constraint.py  higher_order_expression.py  linear_constraint.py  linear_expression.py  optimization_objective.py  optimization_problem.py  optimization_problem_element.py  quadratic_constraint.py  quadratic_expression.py  substitute_variables.py  variable.py
qiskit_addon_opt_mapper/solvers/: __init__.py  cplex_solver.py  gurobi_solver.py  scipy_milp_solver.py  solver.py
releasenotes/: config.yaml
test/: __init__.py  optimization_test_case.py
(+41 files in other folders)
